# termi

./: Cargo.toml
src/: kitty.rs  main.rs  terminal.rs
src/etc/: _termi
src/event/: mod.rs  parser.rs  read.rs
src/termi/: fd.rs  lib.rs
src/termi/feature/: desktop_notifications.rs  keyboard_enhancement.rs  mod.rs
