[package]
name = "termi"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

publish = false

[lib]
name = "termi"
path = "src/termi/lib.rs"

[[bin]]
name = "termi"

[dependencies]
bitflags = "2.6"
rustix = { version = "0.38.37", features = ["event", "fs", "stdio", "termios"] }
vtparse = "0.6.2"

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
